--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.4",
     "eslint": "8.35.0",
     "next": "13.2.3",
+    "next-pwa": "^5.6.0",
     "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
